k8s/gateway/gateway-public/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gateway-public
  labels:
    expose: public
    trust.cert-manager.io/inject: "true"
  annotations:
    argocd.argoproj.io/sync-wave: "-3"
