k8s/gateway/gateway-public/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: public-gw
  namespace: gateway-public
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: 192.168.110.220
  listeners:
    - name: http-apex
      protocol: HTTP
      port: 80
      hostname: presso.ac
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              expose: public
    - name: http-wild
      protocol: HTTP
      port: 80
      hostname: "*.presso.ac"
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              expose: public
    - name: https-apex-terminate
      protocol: HTTPS
      port: 443
      hostname: presso.ac
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              expose: public
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            group: ""
            name: public-gateway-certs
    - name: https-wild-terminate
      protocol: HTTPS
      port: 443
      hostname: "*.presso.ac"
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              expose: public
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            group: ""
            name: public-gateway-certs
    - name: https-apex-passthrough
      protocol: TLS
      port: 443
      hostname: presso.ac
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              expose: public
      tls:
        mode: Passthrough
    - name: https-wild-passthrough
      protocol: TLS
      port: 443
      hostname: "*.presso.ac"
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              expose: public
      tls:
        mode: Passthrough
