k8s/gateway/gateway-public/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-redirect
  namespace: gateway-public
  annotations:
    argocd.argoproj.io/sync-wave: "4"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: public-gw
      namespace: gateway-public
      sectionName: http-apex
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: public-gw
      namespace: gateway-public
      sectionName: http-wild
  hostnames:
    - presso.ac
    - "*.presso.ac"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            port: 443
            statusCode: 302
